tests/lean/1825.lean.expected.out
1825.lean:2:8-2:13: error: application type mismatch
  Lean.ofReduceBool boom'._nativeDecide_1 true (Eq.refl true)
argument has type
  true = true
but function has type
  Lean.reduceBool boom'._nativeDecide_1 = true → boom'._nativeDecide_1 = true
